# CapstoneGroup9

./: .gitignore  README.md  deno.json  deployment.docker-compose.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json
WaveBrigade-backend/: Dockerfile  anc_from_streamer.csv  aux_from_streamer.csv  build.sh  deno.json  package-lock.json  package.json  readEmotibitData.js  readEmotibitData.ts  run.sh  temp_from_streamer.csv  tsconfig.json
WaveBrigade-frontend/: .env  .env.production  Deployment.Dockerfile  Dockerfile  build.bat  index.html  package-lock.json  package.json  run.bat  tsconfig.app.json
brainflow/: .gitignore  Dockerfile  anc_from_streamer.csv  aux_from_streamer.csv  build.sh  package-lock.json  package.json  readEmotibitData.js  readEmotibitData.ts  run.sh
database/: Dockerfile  WB_Database_Setup.sql  database.ts  functions.sql  seedingScript.sql
discoverability/: ofApp.h
emotiBitGRPC/: CMakeLists.txt  build.sh  cmake_install.cmake  emotiBits.grpc.pb.cc  emotiBits.grpc.pb.h  emotiBits.pb.cc  emotiBits.pb.h  emotiBits_client.cc  emotiBits_client.js  emotiBits_pb2.py  emotiBits_pb2.pyi  emotiBits_pb2_grpc.py  emotiBits_server.py  package.json
grpc/: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  build.sh  emotiBits_client  emotiBits_pb2.pyi  emotiBits_server.py  package-lock.json  run.sh
host-electron/: .env  .eslintrc.cjs  README.md  electron-builder.yml  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
host-frontend/: package-lock.json  package.json
src/: ofApp.cpp  ofApp.h
(+174 files in other folders)
